# sprot

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  autogen.sh  configure.ac  rebuild.sh
sprot.data/: default.sprot  web-aap.sprot  web.sprot
src/: Makefile.am  getopt.c  main.cc  main.cpp  sprot.1  sprot.cc  sprot.cpp  sprot.h  sprotcheck.cc  sysdep.cpp  sysdep.h  sysdep_unix.cc  sysdep_windows.cc
win32/installer/: sprot.nsi
win32/installer/distfiles/: default.sprot
win32/src/: config.h  sprot.rc  sysdep.cpp
win32/vc6/: sprot.dsp  sprot.dsw
win32/vs2k8/: sprot.sln  sprot.vcproj
